	* src/WriteGedcom.py (GedcomWriterOptionBox.get_option_box):
	Build person-centered filters only if a person is selected.
	* src/plugins/WriteGeneweb.py (GeneWebWriterOptionBox.get_option_box):
	Build person-centered filters only if a person is selected.
	* src/plugins/WriteFtree.py (FtreeWriterOptionBox.get_option_box):
	Build person-centered filters only if a person is selected.

2005-06-15  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/po/de.po: Applied patches from Jens Seidel <jensseidel@users.sf.net>
	and Anton Huber <anton_huber@gmx.de>

2005-06-10  Alex Roitman  <shura@gramps-project.org>
	* src/docgen/AbiWord2Doc.py: Only embed one data chunk per image
	file; add empty paragraph if the image is not in paragraph already.

2005-06-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ReportUtils.py (place_name): Really return place name
	* src/plugins/NavWebPage.py: Marked strings for translation; Dont crash
	if media file does not exist; Generate pages for every place; Build list
	of used sources

2005-06-09  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/Makefile.am: Install vCal and vCard plugins

2005-06-08  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/EditPerson (__init__): Make gender guessing work again

2005-06-08  Daniel Durand  <daniel@durand-amd.net>
	* src/plugins/rel_fr.py: Add more levels; provide fallback phrases.

2005-06-07  Alex Roitman  <shura@gramps-project.org>
	* src/FamilyView.py (north_american,latin_american,icelandic): Fix
	object/handle mixups.

2005-06-05  Eero Tamminen  <eerot@sf>
	* src/po/fi.po: Translated rest of the tips (=everything).
	  Improved previous translations and fixed typos.

2005-06-05  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Bump up the version number.
	* src/Utils.py (strip_context): Add function.

2005-06-05  Don Allingham  <don@gramps-project.org>
	* src/DateHandler.py: fixed initialization of parser class
	* Release: Version 2.0.3 "Mynd you, møøse bites Kan be pretty